--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang= "en">
 <head>
   <meta charset="utf-8">
-  <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="main.css">
-<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text%7CJulius+Sans+One" rel="stylesheet">
+  <title>freedom</title>
 </head>
 <body>
 <div class="wrapper">
